fix: mobile horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -716,9 +716,7 @@ footer p{
     .section-title {
         margin-bottom: 0px;
     }
-    .about-content{
-        font-size: small;
-    }
+   
 .section-title p{
     display:none;
 }
